# stdlibx

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  graph.dot  quick_cmake_build.py  replace.py  xmake.lua
examples/: BasicExample.cpp  CMakeLists.txt  ContractExample.cpp  FlowExample.cpp  InjectExample.cpp  LoggingExample.cpp  ReflectionExample.cpp  sql_example.cpp
examples/Audio/: AudioExample.cpp  MidFileExample.cpp  MidiExample.cpp  WavExample.cpp
src/: CMakeLists.txt
src/alloc/: CMakeLists.txt  alloc.cppm  collections.cppm  mem.cppm  ranges.cppm  string.cppm  tags.cppm  text.cppm
src/alloc/collections/: deque.cppm  flat_map.cppm  flat_set.cppm  hash_map.cppm  hash_set.cppm  linked_list.cppm  queue.cppm  singly_linked_list.cppm  stack.cppm  tree_map.cppm  tree_set.cppm  valarray.cppm  vector.cppm
src/alloc/mem/: cstdlib.cppm  memory.cppm  memory_resource.cppm  new_header.cppm  scoped_allocator.cppm
src/alloc/ranges/: memory.cppm  ranges.cppm
src/alloc/text/: regex.cppm  string.cppm
src/core/: CMakeLists.txt  array.cppm  collections.cppm  compare.cppm  concepts.cppm  contracts.cppm  core.constants.cppm  core.cppm  core.gsl.cppm  core.main.cppm  cstddef.cppm  exception.cppm  expected.cppm  fmt.cppm  functional.cppm  initializer_list.cppm  io.cppm  iter.cppm  limits.cppm  math.cppm  meta.cppm  optional.cppm  pair.cppm  ranges.cppm  sequence.cppm  span.cppm  string_view.cppm  sys.cppm  system_error.cppm  tags.cppm  text.cppm  tuple.cppm  util.cppm  variant.cppm
src/core/collections/: bitset.cppm
src/core/fmt/: cinttypes.constants.cppm  cinttypes.cppm
src/core/io/: ios.cppm  streambuf.cppm
src/core/iter/: iterator.cppm
src/core/math/: algorithm.cppm  bit.cppm  cmath.cppm  complex.cppm  cstddef.cppm  numbers.cppm  numeric.cppm  ratio.cppm
src/core/meta/: source_location.cppm  stacktrace.cppm  type_traits.cppm  typeindex.cppm  typeinfo.cppm
src/core/ranges/: algorithm.cppm  functional.cppm  generator.cppm  iterator.cppm  ranges.cppm
src/core/sys/: cinttypes.cppm  csetjmp.cppm  csignal.constants.cppm  csignal.cppm  csignal.signal.cppm  cstdlib.cppm  utility.cppm
src/core/text/: cctype.cppm  charconv.cppm  cstdlib.cppm  string.cppm
src/core/util/: algorithm.cppm  cstdlib.cppm  numeric.cppm  utility.cppm
src/std/: CMakeLists.txt  collections.cppm  concurrent.cppm  core.cppm  execution.cppm  fmt.cppm  fs.cppm  io.cppm  iter.cppm  math.cppm  mem.cppm  meta.cppm  net.cppm  random.cppm  ranges.cppm  std.cppm  sync.cppm  sys.cppm  text.cppm  time.cppm  util.cppm
src/std/collections/: bitset.cppm  deque.cppm  flat_map.cppm  flat_set.cppm  hash_map.cppm  hash_set.cppm  linked_list.cppm  queue.cppm  singly_linked_list.cppm  stack.cppm  tree_map.cppm  tree_set.cppm  valarray.cppm  vector.cppm
src/std/concurrent/: coroutine.cppm  future.cppm  stop_token.cppm  thread.cppm
src/std/core/: any.cppm  array.cppm  compare.cppm  concepts.cppm  contracts.cppm  cstddef.cppm  exception.cppm  expected.cppm  functional.cppm  initializer_list.cppm  limits.cppm  optional.cppm  pair.cppm  sequence.cppm  span.cppm  string.cppm  string_view.cppm  system_error.cppm  tags.cppm  tuple.cppm  variant.cppm
src/std/execution/: execution.cppm
src/std/fmt/: charconv.cppm  cinttypes.cppm  format.cppm
src/std/fs/: filesystem.cppm  glob.cppm
src/std/io/: cstdio.cppm  cwchar.cppm  fstream.cppm  iomanip.cppm  ios.cppm  iostream.cppm  istream.cppm  ostream.cppm  print.cppm  spanstream.cppm  sstream.cppm  streambuf.cppm  string.cppm  syncstream.cppm
src/std/iter/: iterator.cppm
src/std/math/: algorithm.cppm  bit.cppm  cmath.cppm  complex.cppm  cstddef.cppm  numbers.cppm  numeric.cppm  random.cppm  ratio.cppm
src/std/mem/: cstdlib.cppm  memory.cppm  memory_resource.cppm  new_header.cppm  scoped_allocator.cppm
src/std/meta/: source_location.cppm  stacktrace.cppm  type_traits.cppm  typeindex.cppm  typeinfo.cppm
src/std/net/: buffer.cppm  executor.cppm  internet.cppm  iocontext.cppm  socket.cppm  timer.cppm
src/std/random/: random.cppm
src/std/ranges/: algorithm.cppm  functional.cppm  generator.cppm  iterator.cppm  memory.cppm  ranges.cppm
src/std/sync/: atomic.cppm  barrier.cppm  condition_variable.cppm  latch.cppm  mutex.cppm  semaphore.cppm  shared_mutex.cppm
src/std/sys/: cinttypes.cppm  csetjmp.cppm  csignal.cppm  cstdlib.cppm  utility.cppm
src/std/text/: cctype.cppm  charconv.cppm  cstdlib.cppm  regex.cppm  string.cppm
src/std/time/: chrono.cppm  chrono.detail.cppm  ctime.cppm
src/std/util/: algorithm.cppm  cstdlib.cppm  numeric.cppm  utility.cppm
src/stdx/: CMakeLists.txt  arch.cppm  audio.cppm  collections.cppm  compiler.cppm  core.cppm  crypto.cppm  csv.cppm  exec.cppm  execution.cppm  ffi.cppm  fmt.cppm  fs.cppm  fs.glob.cppm  future.cppm  io.cppm  iter.cppm  json.cppm  linq.cppm  lua.cppm  math.cppm  math.gmp.cppm  mem.cppm  meta.cppm  net.cppm  os.constants.cppm  os.cppm  process.cppm  random.cppm  ranges.cppm  sql.cppm  stdx.constants.cppm  stdx.cppm  stdx.foundation.cppm  stdx.gsl.cppm  stdx.main.cppm  sync.cppm  sys.cppm  text.cppm  thread.cppm  (+5 more)
src/stdx/arch/: arm.cppm  x86.cppm
src/stdx/collections/: bitset.cppm  deque.cppm  flat_map.cppm  flat_set.cppm  hash_map.cppm  hash_set.cppm  linked_list.cppm  queue.cppm  singly_linked_list.cppm  stack.cppm  tree_map.cppm  tree_set.cppm  valarray.cppm  vector.cppm
src/stdx/compiler/: clang.cppm  llvm.cppm
src/stdx/core/: ArithmeticException.cppm  InvalidOperationException.cppm  NotImplementedException.cppm  NullPointerException.cppm  UnsupportedOperationException.cppm  any.cppm  array.cppm  compare.cppm  concepts.cppm  (+17 more)
tests/: BasicTest.cpp  BigNumberTest.cpp  CMakeLists.txt  ChronoTest.cpp  ContractTest.cpp  CryptoTest.cpp  ExecAsyncTest.cpp  ExecTaskTest.cpp  FlowTest.cpp  FrameworkTest.cpp  FsWalkTest.cpp  LinqTest.cpp  LoggingTest.cpp  NanoTimeTest.cpp  ProcessTest.cpp  ReflectionTest.cpp  ScannerTest.cpp  SqlTest.cpp  UriTest.cpp  UuidTest.cpp  ZipTest.cpp
tests/Audio/: AudioTest.cpp  MidFileTest.cpp  WavTest.cpp
tests/scripts/: hello.py
(+863 files in other folders)
